@@ -1,6 +1,7 @@
 CHANGES
 =======
 * fix setup.cfg with upper case readme for pip install
+* fix buildDEM indentation
 
 * updated to Metashape 2.x.x api
 * Connect to Zenodo for versioning
